--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Recipes</string>
-
+    <string name="cont_descr_drawer_open">Open navigation drawer</string>
+    <string name="cont_descr_drawer_close">Close navigation drawer</string>
 </resources>
