--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="drawer_account_image_description">Your account\'s image</string>
     <string name="drawer_account_settings_description">Edit accounts</string>
     <string name="drawer_account_add">Add an account</string>
-    <string name="drawer_date_top_description">Creation date of the first recipe</string>
-    <string name="drawer_date_end_description">Creation date of the last recipe</string>
-    <string name="drawer_recipe_num_description">Number of recipes</string>
+    <string name="drawer_date_top_description">Creation date</string>
+    <string name="drawer_date_end_description">Change date</string>
+    <string name="drawer_recipe_num_description">Recipes</string>
     <string name="drawer_menu_recipes">Recipes</string>
     <string name="drawer_menu_foods">Ingredients</string>
     <string name="drawer_menu_cart">Cart</string>
