--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="drawer_menu_categories">Categories</string>
     <string name="drawer_menu_settings">Settings</string>
     <string name="action_search">Search</string>
+    <string name="action_search_clear">Clear search</string>
     <string name="action_clear">Clear</string>
     <string name="list_group">Group by</string>
     <string name="list_group_all">All (no group)</string>
@@ -26,7 +27,7 @@
     <string name="list_group_time">Time</string>
     <string name="list_group_food">Food</string>
     <string name="list_sort">Sort by</string>
-    <string name="list_sort_alphabet">Alphabet</string>
+    <string name="list_sort_name">Name</string>
     <string name="list_sort_account">Account</string>
     <string name="list_sort_date_top">Creation date</string>
     <string name="list_sort_date_end">Change date</string>
@@ -35,5 +36,5 @@
     <string name="list_view">View</string>
     <string name="list_view_full">Full</string>
     <string name="list_view_short">Short</string>
-    <string name="list_reset">Reset to default</string>
+    <string name="list_reset">Reset list</string>
 </resources>
