--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,14 +19,14 @@
     <string name="action_clear">Clear</string>
     <string name="action_reset">Reset to default</string>
     <string name="list_group">Group by</string>
-    <string name="list_group_all">All (no group)</string>
-    <string name="list_group_bookmark">Bookmark</string>
-    <string name="list_group_label">Label</string>
-    <string name="list_group_category">Category</string>
+    <string name="recipe_group_all">All (no group)</string>
+    <string name="recipe_group_bookmark">Bookmark</string>
+    <string name="recipe_group_label">Label</string>
+    <string name="recipe_group_category">Category</string>
     <string name="list_group_energy">Energy</string>
     <string name="list_group_nutrition">Nutrition</string>
     <string name="list_group_time">Time</string>
-    <string name="list_group_food">Ingredient</string>
+    <string name="recipe_group_food">Ingredient</string>
     <string name="list_sort">Sort by</string>
     <string name="list_sort_name">Name</string>
     <string name="list_sort_account">Account</string>
