--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,10 @@
         <item quantity="many">%d grams</item>
         <item quantity="other">%d grams</item>
     </plurals>
+    <string name="nutrition_carbohydrate">Carbohydrate</string>
+    <string name="nutrition_protein">Protein</string>
+    <string name="nutrition_fat">Fat</string>
+    <string name="nutrition_energy_unit">%d kCal</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
