--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="nutrition_carbohydrate">Carbohydrate</string>
     <string name="nutrition_protein">Protein</string>
     <string name="nutrition_fat">Fat</string>
-    <string name="nutrition_energy">Energy</string>
+    <string name="nutrition_energy_value">%d\nkCal</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
