--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,4 +128,6 @@
         "interact, and exist in space and in relation to each other. Realistic lighting shows "
         "seams, divides space, and indicates moving parts.\n\n"
     </string>
+    <string name="title_activity_recipe_tab">RecipeTabActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
