--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,10 @@
     <string name="action_spinner">Choose</string>
     <string name="action_overflow">More</string>
     <string name="list_group">Group by</string>
-    <string name="recipe_group_all">All (no group)</string>
-    <string name="recipe_group_bookmark">Bookmark</string>
-    <string name="recipe_group_label">Label</string>
-    <string name="recipe_group_category">Category</string>
+    <string name="recipe_group_category">Categories</string>
+    <string name="recipe_group_label">Labels</string>
+    <string name="recipe_group_bookmark">Bookmarks</string>
+    <string name="recipe_group_all">All</string>
     <string name="list_group_energy">Energy</string>
     <string name="list_group_nutrition">Nutrition</string>
     <string name="list_group_time">Time</string>
