--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">Recipes</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+
+    <!--Navigation-->
+    <string name="navigation_recipes">Recipes</string>
+    <string name="navigation_cart">Cart</string>
+
     <string name="drawer_account_image_description">Your account\'s image</string>
     <string name="drawer_account_details_description">Account details</string>
     <string name="drawer_account_add">Add an account</string>
