--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,9 +135,9 @@
     <string name="drawer_base_nav_recipe_all">All recipes</string>
     <string name="drawer_base_nav_recipe_favorite">Favorite recipes</string>
 
-    <!--Mvp tabs-->
+    <!--Recipe tabs-->
     <string name="tab_recipe_category">Categories</string>
-    <string name="tab_recipe_list">List</string>
+    <string name="tab_recipe_grid">List</string>
     <string name="tab_recipe_label">Labels</string>
     <string name="tab_recipe_bookmark">Bookmarks</string>
 
