--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="navigation_recipes">Recipes</string>
     <string name="navigation_cart">Cart</string>
 
+    <!--Notification-->
+    <string name="notification_no_internet_for_fetching_recipes">
+        Please, update internet connection for fetching new recipes
+    </string>
+
     <string name="drawer_account_image_description">Your account\'s image</string>
     <string name="drawer_account_details_description">Account details</string>
     <string name="drawer_account_add">Add an account</string>
