Update ui - add bottom navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,4 +212,10 @@
             {\"id\":19,\"recipeId\":19,\"labelId\":3}
         ]
     </string>
+    <string name="title_activity_recipe_collection">Recipes</string>
+    <string name="title_categories">Categories</string>
+    <string name="navigation_recipe_collections_categories">Categories</string>
+    <string name="navigation_recipe_collections_grid">Grid</string>
+    <string name="navigation_recipe_collections_labels">Labels</string>
+    <string name="navigation_recipe_collections_bookmarks">Bookmarks</string>
 </resources>
