--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Recipes</string>
+    <string name="recipe_card_date_format">MMMM YYYY</string>
 
     <!--Recipe tabs-->
     <string name="tab_recipe_category">Categories</string>
