--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,149 +70,14 @@
         <item quantity="many">%d grams</item>
         <item quantity="other">%d grams</item>
     </plurals>
-    <string name="nutrition_title">Nutrition value</string>
+    <string name="nutrition_value">Nutrition value</string>
     <string name="nutrition_quantity_switch">Per %s</string>
-    <string name="nutrition_carbohydrate">Carbohydrate</string>
+    <string name="nutrition_carbohydrate">Carbs</string>
     <string name="nutrition_protein">Protein</string>
     <string name="nutrition_fat">Fat</string>
-    <string name="nutrition_energy_value">%d\nkCal</string>
+
     <string name="percent">%d%%</string>
-    <string name="large_text">
-        "Material is the metaphor.\n\n"
 
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
-        "Material is the metaphor.\n\n"
-
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
-        "Material is the metaphor.\n\n"
-
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
-        "Material is the metaphor.\n\n"
-
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
-        "Material is the metaphor.\n\n"
-
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
-    </string>
-    <string name="drawer_base_nav_recipe_all">All recipes</string>
-    <string name="drawer_base_nav_recipe_favorite">Favorite recipes</string>
-
-    <!--Startup entities. Json array-->
-    <string name="startup_entity_recipe">
-        [
-            {\"id\":0,\"uuid\":\"34d74aa8-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 0\",\"categoryId\":0},
-            {\"id\":1,\"uuid\":\"34d74d46-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 1\",\"categoryId\":1},
-            {\"id\":2,\"uuid\":\"34d74e86-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 2\",\"categoryId\":2},
-            {\"id\":3,\"uuid\":\"34d75020-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 3\",\"categoryId\":3},
-            {\"id\":4,\"uuid\":\"34d7519c-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 4\",\"categoryId\":4},
-            {\"id\":5,\"uuid\":\"34d757a0-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 5\",\"categoryId\":5},
-            {\"id\":6,\"uuid\":\"34d7593a-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 6\",\"categoryId\":6},
-            {\"id\":7,\"uuid\":\"34d75e58-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 7\",\"categoryId\":7},
-            {\"id\":8,\"uuid\":\"34d7602e-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 8\",\"categoryId\":8},
-            {\"id\":9,\"uuid\":\"34d761b4-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 9\",\"categoryId\":9},
-            {\"id\":10,\"uuid\":\"34d7634e-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 10\",\"categoryId\":0},
-            {\"id\":11,\"uuid\":\"34d764b6-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 11\",\"categoryId\":1},
-            {\"id\":12,\"uuid\":\"34d7661e-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 12\",\"categoryId\":2},
-            {\"id\":13,\"uuid\":\"34d767ae-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 13\",\"categoryId\":3},
-            {\"id\":14,\"uuid\":\"34d76c54-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 14\",\"categoryId\":4},
-            {\"id\":15,\"uuid\":\"34d76d44-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 15\",\"categoryId\":5},
-            {\"id\":16,\"uuid\":\"34d76e48-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 16\",\"categoryId\":6},
-            {\"id\":17,\"uuid\":\"df99f06c-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 17\",\"categoryId\":7},
-            {\"id\":18,\"uuid\":\"df99f30a-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 18\",\"categoryId\":8},
-            {\"id\":19,\"uuid\":\"df99f42c-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 19\",\"categoryId\":9}
-        ]
-    </string>
-    <string name="startup_entity_category">
-        [
-            {\"id\":0,\"uuid\":\"062e3c88-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 0\"},
-            {\"id\":1,\"uuid\":\"0c7cbc90-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 1\"},
-            {\"id\":2,\"uuid\":\"0c7cbf2e-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 2\"},
-            {\"id\":3,\"uuid\":\"0c7cc050-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 3\"},
-            {\"id\":4,\"uuid\":\"0c7cc14a-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 4\"},
-            {\"id\":5,\"uuid\":\"0c7cc4b0-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 5\"},
-            {\"id\":6,\"uuid\":\"0c7cc5aa-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 6\"},
-            {\"id\":7,\"uuid\":\"0c7cc690-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 7\"},
-            {\"id\":8,\"uuid\":\"0c7cc776-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 8\"},
-            {\"id\":9,\"uuid\":\"37710c26-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Category # 9\"}
-        ]
-    </string>
-    <string name="startup_entity_label">
-        [
-            {\"id\":0,\"uuid\":\"55cbb388-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Label # 0\"},
-            {\"id\":1,\"uuid\":\"55cbbdc4-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Label # 1\"},
-            {\"id\":2,\"uuid\":\"55cbc030-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Label # 2\"},
-            {\"id\":3,\"uuid\":\"55cbc508-3d5e-11e7-a919-92ebcb67fe33\",\"name\":\"Label # 3\"}
-        ]
-    </string>
-    <string name="startup_entity_recipe_label_join">
-        [
-            {\"id\":0,\"recipeId\":0,\"labelId\":0},
-            {\"id\":1,\"recipeId\":1,\"labelId\":1},
-            {\"id\":2,\"recipeId\":2,\"labelId\":2},
-            {\"id\":3,\"recipeId\":3,\"labelId\":1},
-            {\"id\":4,\"recipeId\":4,\"labelId\":2},
-            {\"id\":5,\"recipeId\":5,\"labelId\":1},
-            {\"id\":6,\"recipeId\":6,\"labelId\":2},
-            {\"id\":7,\"recipeId\":7,\"labelId\":1},
-            {\"id\":8,\"recipeId\":8,\"labelId\":2},
-            {\"id\":9,\"recipeId\":9,\"labelId\":1},
-            {\"id\":10,\"recipeId\":10,\"labelId\":2},
-            {\"id\":11,\"recipeId\":11,\"labelId\":3},
-            {\"id\":12,\"recipeId\":12,\"labelId\":0},
-            {\"id\":13,\"recipeId\":13,\"labelId\":3},
-            {\"id\":14,\"recipeId\":14,\"labelId\":0},
-            {\"id\":15,\"recipeId\":15,\"labelId\":3},
-            {\"id\":16,\"recipeId\":16,\"labelId\":0},
-            {\"id\":17,\"recipeId\":17,\"labelId\":3},
-            {\"id\":18,\"recipeId\":18,\"labelId\":0},
-            {\"id\":19,\"recipeId\":19,\"labelId\":3}
-        ]
-    </string>
     <string name="activity_recipe_collections_title">Recipes</string>
     <string name="activity_recipe_collections_nav_categories">Categories</string>
     <string name="activity_recipe_collections_nav_grid">Grid</string>
@@ -220,7 +85,7 @@
     <string name="activity_recipe_collections_appbar_add">Add recipe</string>
     <string name="fragment_recipe_restrict_list_subtitle_category">Category</string>
     <string name="fragment_recipe_restrict_list_subtitle_label">Label</string>
-    <string name="fragment_recipe_detail_descriptions_title">Description</string>
-    <string name="fragment_recipe_detail_ingredients_title">Ingredients</string>
-    <string name="fragment_recipe_detail_methods_title">Methods</string>
+    <string name="fragment_recipe_details_description_title">Description</string>
+    <string name="fragment_recipe_details_ingredients_title">Ingredients</string>
+    <string name="fragment_recipe_details_methods_title">Methods</string>
 </resources>
