--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_edit">Edit</string>
     <string name="action_delete">Delete</string>
+
     <plurals name="quantity_serving">
         <item quantity="zero">%d serving</item>
         <item quantity="one">%d serving</item>
@@ -70,23 +71,16 @@
         <item quantity="many">%d grams</item>
         <item quantity="other">%d grams</item>
     </plurals>
-    <plurals name="quantity_weight_kilogram">
-        <item quantity="other">%d kg</item>
-    </plurals>
-    <plurals name="quantity_energy_calorie">
-        <item quantity="other">%d\nCal</item>
-    </plurals>
-    <plurals name="quantity_energy_kilocalorie">
-        <item quantity="other">%d\nkCal</item>
-    </plurals>
+    <string name="quantity_weight_exact_gram">%.2f g</string>
+    <string name="quantity_weight_exact_kilogram">%.2f kg</string>
+    <string name="quantity_energy_calorie_n">%d\nCal</string>
+    <string name="quantity_energy_kilocalorie_n">%d\nkCal</string>
+    <string name="quantity_percent">%d%%</string>
     <string name="nutrition_value">Nutrition value</string>
     <string name="nutrition_quantity_switch">Per %s</string>
     <string name="nutrition_carbohydrate">Carbs</string>
     <string name="nutrition_protein">Protein</string>
     <string name="nutrition_fat">Fat</string>
-
-    <string name="percent">%d%%</string>
-
     <string name="activity_recipe_collections_title">Recipes</string>
     <string name="activity_recipe_collections_nav_categories">Categories</string>
     <string name="activity_recipe_collections_nav_grid">Grid</string>
