--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,6 @@
     <string name="fragment_recipe_details_description_title">Description</string>
     <string name="fragment_recipe_details_ingredients_title">Ingredients</string>
     <string name="fragment_recipe_details_methods_title">Methods</string>
+    <string name="fragment_recipe_details_methods_delete_action">Method %d has been removed</string>
+    <string name="fragment_recipe_details_methods_delete_reject">UNDO</string>
 </resources>
