--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,10 @@
     <string name="action_settings">Settings</string>
     <string name="action_edit">Edit</string>
     <string name="action_delete">Delete</string>
+    <plurals name="quantity_recipe">
+        <item quantity="one">%d Recipe</item>
+        <item quantity="other">%d Recipes</item>
+    </plurals>
     <plurals name="quantity_label">
         <item quantity="one">%d Label</item>
         <item quantity="other">%d Labels</item>
@@ -127,6 +131,11 @@
     <string name="fragment_recipe_details_methods_delete_reject">UNDO</string>
     <string name="fragment_entity_list_appbar_add">Add</string>
     <string name="fragment_entity_list_appbar_search">Search</string>
+    <string name="fragment_entity_list_delete_success">%1$s has been removed</string>
+    <string name="fragment_entity_list_delete_reject">UNDO</string>
+    <string name="fragment_entity_list_delete_fail">
+        %1$s has %2$s. Remove related recipes first.
+    </string>
     <string name="hint_label_name">Label name</string>
     <string name="hint_category_name">Category name</string>
     <string name="hint_author_name">Author name</string>
