--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="fragment_recipe_restrict_list_subtitle_category">Category</string>
     <string name="fragment_recipe_restrict_list_subtitle_label">Label</string>
     <string name="fragment_recipe_details_description_title">Description</string>
+    <string name="fragment_recipe_details_nutrition_title">Nutrition</string>
     <string name="fragment_recipe_details_ingredients_title">Ingredients</string>
     <string name="fragment_recipe_details_methods_title">Methods</string>
     <string name="fragment_recipe_details_methods_delete_action">Method %d has been removed</string>
